--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <h2>6. 문의하기</h2>
       <p>
-        본 개인정보 처리방침에 대해 궁금한 점이 있으시면, [귀하의 연락처 정보]로
+        본 개인정보 처리방침에 대해 궁금한 점이 있으시면, chosuncoder@gmail.com 으로
         문의해 주세요.
       </p>
 
